Fix spacing issue with amazon on payment pages

--- a/cypherpunk-com/src/app/components/payment/amazon/amazon.component.scss
+++ b/cypherpunk-com/src/app/components/payment/amazon/amazon.component.scss
@@ -14,5 +14,5 @@
   }
   img { display: none !important; }
 }
-#walletWidgetDiv { width: 350px; height: 228px; margin: 20px auto; display: none; }
-#consentWidgetDiv { width: 350px; height: 140px; margin: 20px auto; display: none; }
+#walletWidgetDiv { width: 350px; height: 228px; margin: 20px 0; display: none; }
+#consentWidgetDiv { width: 350px; height: 140px; margin: 20px 0; display: none; }
